fix swagger documentation
